# workspace-os

./: .gitignore  .readthedocs.yaml  .security-exceptions.yml  .wos-squad-lead-mission.md  CICLO_ARQUITECTURA_MODULAR.md  CICLO_EVALUACION_ESTRATEGICA.md  CLA.md  CLEANUP_STATUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_UPDATES.md  ENTERPRISE_READINESS_COMPLETE.md  FINAL_SESSION_RESULTS.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ISSUE_64.md  IMPLEMENTATION_SUMMARY_ISSUE_70.md  IMPLEMENTATION_SUMMARY_ISSUE_71.txt  IMPLEMENTATION_SUMMARY_ISSUE_72.md  LAUNCH_ANNOUNCEMENTS.md  LEARNING_PHASE1_COMPLETE.md  LICENSE  MAINTAINERS.md  NOTICE  OBSERVER-FEEDBACK-ITERATION-77.md  OPENSOURCE_LAUNCH_CYCLE.md  OPENSOURCE_READINESS_SUMMARY.md  PR-MERGE-SUMMARY.md  README.md  RESUMEN_FINAL.md  SECURITY.md  SESSION_STATUS_UPDATE.md  WOS-PR-REVIEW-FINAL.md  WOS_AUDIT_IMPROVEMENT_PLAN.md  WOS_BUSINESS_MODEL_CORRECTED.md  WOS_COLLECTIVE_INTELLIGENCE_MODEL.md  WOS_LEARNING_ANALYSIS.md  WOS_OPERACIONAL_CONFIRMADO.md  WOS_SECURITY_PORTABILITY_CYCLE_SUMMARY.md  WOS_SESSION_FINAL_SUMMARY.md  (+6 more)
.agents/: AGENTS.md
.archive/: CONTEXT-COMPACTION-SUMMARY.md  CROSS-CHECK-ITERATION-40.md  ITERATION-77-SUMMARY.txt  OBSERVER-FEEDBACK-77.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_with_acceptance_criteria.md  roadmap-item.md
.github/workflows/: mutation-testing.yml  security-scan.yml
config/: quality.json  security-policy.yml  workspace.sources.example.json  workspace.sources.json
docs/: ENTERPRISE.md  GETTING_STARTED.md  observer-feedback-iteration-68.md  progress-monitoring.md  squad-lead-mode.md  world-class-team-profile.md
docs/api/: conf.py  examples.rst  index.rst
docs/api/_ext/: wos_api_docs.py
docs/architecture/: overview.md
docs/architecture/decisions/: 0001-repository-responsibilities.md  0002-local-first-cloud-compatible.md  0003-operational-conscience-layer.md  0004-request-bridge-pipeline.md  0005-adev-oce-wos-stack.md  0006-oce-layered-extension-model.md  0007-google-workspace-metadata-connector.md  0008-secure-remote-access-model.md  0009-capture-and-promotion-workflow.md  0010-consulting-estimate-workflow.md
docs/architecture/policies/: adev-enforcement.md  deliverables.md  finance.md  global-safety.md  legal.md  malicious-agentic-ai.md  orchestration.md  privacy.md  security.md
docs/features/: agent-performance-dashboard.md  agent-routing-validation.md  ai-code-review.md  collaborative-learning.md  local-metrics.md  progress-tracking.md
docs/product/: backlog.md  discovery-interview-2026-05-18.md  operating-model.md  product-plan.md  roadmap.md  vision.md
docs/quality/: README.md  coverage.md
docs/runbooks/: high-throughput-issue-resolution.md  initial-setup.md  model-providers.md  slack-notifications.md
docs/security/: README.md  bandit-sast.md  vulnerability-scanning-policy.md
docs/testing/: mutation-testing.md  performance-regression.md
examples/: README.md  collaborative_learning_example.py  progress_demo.py  quickstart_demo.ps1  quickstart_demo.sh
scripts/: README_TRACEABILITY_METRICS.md  README_VALIDATE_TRACEABILITY.md  VALIDATE_TRACEABILITY_QUICKREF.md  bandit_json_to_sarif.py  check-issues.sh  install-wos-command.ps1  monitor-cycle-animated.py  monitor-cycle-progress.sh  optimize-cycle-throughput.sh  run-mutation-tests.ps1  run-mutation-tests.sh  run-optimized-cycle.sh  run-squad-lead-with-monitor.sh  test_traceability_metrics.py  traceability_metrics.py  validate_traceability.py  wos.cmd  wos.ps1  wos.sh
scripts/security/: check-exceptions.py  install-hooks.sh  pre-commit-scan.sh  scan-dependencies.sh  setup-security-scanning.sh
src/workspace_os/: __init__.py  __main__.py  agent_adapter.py  agent_adapter.py.backup  agent_performance_dashboard.py  agent_policy.py  agent_queue.py  agent_quota.py  ai_code_review.py  architecture_decision.py  autonomous_cycle.py  batch.py  bridge.py  capture.py  classification.py  cli.py  code_quality.py  collaborative_learning.py  complex_issue_workflow.py  config.py  conscience.py  conscience_report.py  context_pack.py  conversation.py  cycle.py  debug_logger.py  debug_logging.py  defaults.py  delegation.py  feedback.py  git_status.py  habits.py  housekeeping.py  issue_complexity.py  journal.py  learning.py  local_metrics.py  memory.py  model_provider.py  notifications.py  (+23 more)
src/workspace_os/security/: __init__.py  policy.py  validator.py
src/workspace_os/web_assets/: app.css  app.js  index.html
tests/: test_adev_enforcement.py  test_agent_adapter.py  test_agent_failure_classification.py  test_agent_performance_dashboard.py  test_agent_queue.py  test_agent_quota.py  test_agent_routing.py  test_ai_code_review.py  test_api_docs.py  test_autonomous_cycle.py  test_batch.py  test_capture.py  test_classification.py  test_cli.py  test_collaborative_learning.py  test_config.py  test_conscience.py  test_context_compaction.py  test_context_pack.py  test_conversation.py  test_cross_check_routing.py  test_cycle.py  test_debug_flag.py  test_debug_logger.py  test_debug_logging.py  test_feedback.py  test_getting_started.py  test_habits.py  test_housekeeping.py  test_issue_complexity.py  test_journal.py  test_learning.py  test_local_metrics.py  test_memory.py  test_model_provider.py  test_notifications.py  test_oce_extension_adaptive_learning.py  test_onboarding.py  test_overview.py  test_performance_regression.py  (+16 more)
