[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-os"
version = "0.1.0"
description = "Local-first controller for an AI-assisted workspace."
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
workspace = "workspace_os.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
workspace_os = ["web_assets/*.html", "web_assets/*.css", "web_assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mutmut]
paths_to_mutate = "src/workspace_os/"
backup = false
runner = "python -m pytest -x --tb=line -q"
tests_dir = "tests/"
dict_synonyms = "Struct, NamedStruct"
