[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-os"
version = "0.1.0"
description = "Local-first controller for an AI-assisted workspace."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sergio Canales", email = "sergio.canales.e@gmail.com"}
]
keywords = ["ai", "development", "automation", "workflow", "agents", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/os-santiago/workspace-os"
Documentation = "https://github.com/os-santiago/workspace-os/tree/main/docs"
Repository = "https://github.com/os-santiago/workspace-os"
Issues = "https://github.com/os-santiago/workspace-os/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "bandit>=1.7.0",
    "black>=26.3.1",
    "aiohttp>=3.14.1",
    "ansible>=12.2.0",
    "cryptography>=48.0.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "sentry-sdk>=2.8.0",
    "sphinx>=8.0.0",
    "starlette>=1.3.1",
    "torch>=2.7.1",
]

security = [
    "pip-audit>=2.6.0",
    "safety>=2.3.0",
    "bandit[toml]>=1.7.5",
    "cyclonedx-bom>=3.11.0",
]

[project.scripts]
workspace = "workspace_os.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
workspace_os = ["web_assets/*.html", "web_assets/*.css", "web_assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["src/workspace_os"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*Protocol:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.mutmut]
paths_to_mutate = "src/workspace_os/"
backup = false
runner = "python -m pytest -x --tb=line -q"
tests_dir = ["tests/"]
dict_synonyms = "Struct, NamedStruct"

[tool.bandit]
exclude_dirs = ["tests/", ".venv/", "build/", ".claude/"]
skips = ["B101"]
